2001-09-24  Darin Adler  <darin@bentspoon.com>

	* libart-config.in: Oops. Typo in my last change.

2001-09-20  Darin Adler  <darin@bentspoon.com>

	* configure.in: Set LIBART_INCLUDEDIR to match Makefile.am.
	Also put the -lm in here too.
	* libart-config.in: Use LIBART_INCLUDEDIR instead of includedir
	and use LIBART_LIBDIR and LIBART_LIBS instead of hard-coding the
	list of libraries.

2001-09-13  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (libart_lgplincdir): move to includedir/gnome-1.0

2001-06-14  Miguel de Icaza  <miguel@ximian.com>

	* Makefile.am: add -lm to the link line, so applications get this
	without specifying it.

2001-08-08  Mathieu Lacage <mathieu@gnu.org>

	Rewrote a bunch of it, fixed a number of XXXs
	
	* doc/libart.sgml: fix number of stuff.
	* doc/dia/art-coverage-calculus.dia,
	  doc/art-coverage-calculus.png:
	  add new diagram.

2001-08-05  Mathieu Lacage <mathieu@gnu.org>

	Vacations are cool :)
	
	* doc/libart.sgml: add documentation on the renderer internals.
	* doc/tmpl/*.sgml: fix misc typos.
	* doc/dia/art-oversampling.dia
	  doc/dia/art-winding-number.dia
	  doc/dia/art-svp-vpath.dia
	  doc/art-oversampling.png
	  doc/art-svp-vpath.png
	  doc/art-winding-number.png:
	  add new diagrams and png versions for the internals of the
	  renderer.
	
2001-07-16  Mathieu Lacage <mathieu@gnu.org>

	Is anyone going to review it ?
	
	* doc/tmpl/art_render.sgml: write documentation.
	* doc/libart-sections.txt: tweak.
	
2001-07-14  Mathieu Lacage <mathieu@gnu.org>

	I just need to finish the section on rendering API and
	I'll have finished the most important.
	Proofreaders, where are you ? I hate everyone anyway.

	* doc/libart.sgml: add sections on known problems and 
	libart internals.
	
	
2001-07-14  Mathieu Lacage <mathieu@gnu.org>

	National Day in .fr. I got 23 two days ago :)

	* doc/libart-sections.txt: remove art_svp_minus since it
	is not implemented.
	* cleanup doc/dia/art-svp-ops.dia add doc/art-svp-ops.png.