@@ -1,0 +1,52 @@
+.\" This manpage has been automatically generated by docbook2man 
+.\" from a DocBook document.  This tool can be found at:
+.\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
+.\" Please send any bug reports, improvements, comments, patches, 
+.\" etc. to Steve Cheng <steve@ggi-project.org>.
+.TH "LIBART-CONFIG" "1" "09 januar 2002" "" ""
+.SH NAME
+libart-config \- script to get information about the installed version of       LIBART.
+.SH SYNOPSIS
+
+\fBlibart-config\fR [ \fB --prefix\fI[=DIR]\fB \fR ] [ \fB --exec-prefix\fI[=DIR]\fB \fR ] [ \fB --libs \fR ] [ \fB --cflags \fR ] [ \fB --version \fR ]
+
+.SH "DESCRIPTION"
+.PP
+\fBlibart-config\fR is a tool that is used to determine
+the compiler and linker flags that should be used to compile and
+link programs that use \fILIBART\fR library.
+.SH "OPTIONS"
+.TP
+\fB--prefix=PREFIX\fR
+If specified, use \fIPREFIX\fR instead
+of the installation prefix that
+\fILIBART\fR was built with when computing
+the output for the \fB--cflags\fR and
+\fB--libs\fR options. This option is also used for
+the exec prefix if \fB--exec-prefix\fR was
+not specified. This option must be specified before any
+\fB--libs\fR or \fB--cflags\fR options.
+.TP
+\fB--exec-prefix=PREFIX\fR
+If specified, use \fIPREFIX\fR instead
+of the installation exec prefix that
+\fILIBART\fR was built with when computing
+the output for the \fB--cflags\fR and
+\fB--libs\fR options. This option must be specified
+before any \fB--libs\fR or \fB--cflags\fR options.
+.TP
+\fB--libs\fR
+Print the linker flags that are necessary to link a
+\fILIBART\fR program.
+.TP
+\fB--cflags\fR
+Print the compiler flags that are necessary to compile a
+\fILIBART\fR program.
+.TP
+\fB--version\fR
+Print the currently installed version of
+\fILIBART\fR on the standard output.
+.SH "AUTHOR"
+.PP
+This manual page was written by Christian Marillat <marillat@debian.org> for
+the Debian GNU/Linux system (but may be used by others).
